geodeserver and recorder tests now share Geode server config